--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Title, decription, tagline and URL for your site
 # Can be used in your theme by calling 'site.title' and so on
-name: decapr.io
-description: Thoughts from a frontend developer from Toronto
+name: Luca Decaprio
+description: Thoughts from a frontend developer
 url: bliitzkrieg.github.io
 
 # Used so Jekyll outputs the site correctly so Gulp can do what it wants
